tests/parse_print/random_perturb/set01/delete-02/stderr.expected
Conjure is exiting due to user errors.
Error:
    tests/parse_print/random_perturb/set01/delete-02/delete-02.essence:3:14:
expecting domain
Unsupported attributes for set: siz
Only these are supported: size, minSize, maxSize
    find x : set (siz 2) of int(1..3)
                 ^